--- a/src/components/button/Button.styles.scss
+++ b/src/components/button/Button.styles.scss
@@ -4,18 +4,18 @@
     height: 50px;
     letter-spacing: 0.5px;
     line-height: 50px;
-    padding: 0 35px 0 35px;
+    padding: 0 15px 0 15px;
     font-size: 15px;
     background-color: black;
     color: white;
     text-transform: uppercase;
-    font-family: 'Open Sans Condensed';
     font-weight: bolder;
     border: none;
     cursor: pointer;
     display: flex;
     justify-content: center;
-  
+    margin-right: 10px;
+
     &:hover {
       background-color: white;
       color: black;
