--- a/src/components/Cart-dropdown/CartDropdown.styles.scss
+++ b/src/components/Cart-dropdown/CartDropdown.styles.scss
@@ -10,6 +10,7 @@
     top: 90px;
     right: 40px;
     z-index: 5;
+    // overflow: hidden;
   
     .empty-message {
       font-size: 18px;
@@ -20,9 +21,12 @@
       height: 240px;
       display: flex;
       flex-direction: column;
-      overflow: scroll;
-    }
+      overflow-y: scroll;  
+      scrollbar-width: none;  }
   
+     .cart-items::-webkit-scrollbar {
+        display: none;
+      }
     button {
       margin-top: auto;
     }
