--- a/src/components/shop/Shop.styles.scss
+++ b/src/components/shop/Shop.styles.scss
@@ -1,3 +1,6 @@
+
+// .cont{
+
 .product-container{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -5,3 +8,8 @@
     row-gap: 50px;
     padding: 30px 50px
 }
+// .product-title{
+//     display: flex;
+//     padding: 30px 50px
+// }
+// }
